# OpenCV-with-QT

./: CMakeLists.txt  README.md
Headers/: opencvworker.h  qcvwidget.h
Sources/: main.cpp  opencvworker.cpp  qcvwidget.cpp  qcvwidget.ui
